--- a/templates/add_staff.html
+++ b/templates/add_staff.html
@@ -9,11 +9,11 @@
       <div class="col-md-6">
         <h2>Personal Info</h2>
         <div class="form-group">
-          <label for="first_name">First Name:</label>
+          <label for="first_name">First Name *:</label>
           <input type="text" class="form-control" id="first_name" name="first_name" required placeholder="Enter first name">
         </div>
         <div class="form-group">
-          <label for="last_name">Last Name:</label>
+          <label for="last_name">Last Name *:</label>
           <input type="text" class="form-control" id="last_name" name="last_name" required placeholder="Enter last name">
         </div>
         <div class="form-group">
@@ -26,15 +26,15 @@
           </select>
         </div>
         <div class="form-group">
-          <label for="dob">Date of Birth:</label>
+          <label for="dob">Date of Birth *:</label>
           <input type="date" class="form-control" id="dob" name="dob" required>
         </div>
         <div class="form-group">
-          <label for="personal_email">Personal Email:</label>
+          <label for="personal_email">Personal Email *:</label>
           <input type="email" class="form-control" id="personal_email" name="personal_email" required placeholder="Enter personal email">
         </div>
         <div class="form-group">
-          <label for="contact_number">Contact Number:</label>
+          <label for="contact_number">Contact Number *:</label>
           <input type="text" class="form-control" id="contact_number" name="contact_number" required placeholder="Enter contact number">
         </div>
         <div class="form-group">
@@ -42,7 +42,7 @@
           <textarea class="form-control" id="address" name="address" placeholder="Enter address"></textarea>
         </div>
         <div class="form-group">
-          <label for="emergency_contact_number">Emergency Contact Number:</label>
+          <label for="emergency_contact_number">Emergency Contact Number *:</label>
           <input type="text" class="form-control" id="emergency_contact_number" name="emergency_contact_number" required placeholder="Enter emergency contact number">
         </div>
         <div class="form-group">
@@ -75,7 +75,7 @@
       <div class="col-md-6">
         <h2>Official Info</h2>
         <div class="form-group">
-          <label for="proj_id">Project Name:</label>
+          <label for="proj_id">Project Name *:</label>
           <select class="form-control" id="proj_id" name="proj_id" required>
             <option value="">Select a Project</option>
             {% for project in projects %}
@@ -89,7 +89,7 @@
         </div>
         
         <div class="form-group">
-          <label for="department">Department:</label>
+          <label for="department">Department *:</label>
           <input type="text" class="form-control" id="department" name="department" required placeholder="Enter department">
         </div>
         <div class="form-group">
@@ -101,7 +101,7 @@
           <input type="text" class="form-control" id="un_index_number" name="un_index_number" placeholder="Enter UN index number">
         </div>
         <div class="form-group">
-          <label for="joining_date">Joining Date:</label>
+          <label for="joining_date">Joining Date *:</label>
           <input type="date" class="form-control" id="joining_date" name="joining_date" required>
         </div>
         <div class="form-group">
@@ -109,15 +109,15 @@
           <input type="date" class="form-control" id="last_working_date" name="last_working_date">
         </div>
         <div class="form-group">
-          <label for="contract_type">Contract Type:</label>
+          <label for="contract_type">Contract Type *:</label>
           <input type="text" class="form-control" id="contract_type" name="contract_type" required placeholder="Enter contract type">
         </div>
         <div class="form-group">
-          <label for="grade">Grade:</label>
+          <label for="grade">Grade *:</label>
           <input type="text" class="form-control" id="grade" name="grade" required placeholder="Enter grade">
         </div>
         <div class="form-group">
-          <label for="designation">Designation:</label>
+          <label for="designation">Designation *:</label>
           <input type="text" class="form-control" id="designation" name="designation" required placeholder="Enter designation">
         </div>
         <div class="form-group">
