--- a/templates/add_inventory.html
+++ b/templates/add_inventory.html
@@ -5,7 +5,7 @@
   <h1 style="text-align: center;">Add Inventory</h1>
   <form method="POST" action="{{ url_for('add_inventory') }}">
     <div class="form-group">
-      <label for="proj_id">Project:</label>
+      <label for="proj_id">Project *:</label>
       <select class="form-control" id="proj_id" name="proj_id" required>
         <option value="">Select a Project</option> <!-- Added prewritten option -->
         {% for project in projects %}
@@ -14,27 +14,27 @@
       </select>
     </div>   
     <div class="form-group">
-      <label for="equipment">Equipment:</label>
+      <label for="equipment">Equipment *:</label>
       <input type="text" class="form-control" id="equipment" name="equipment" required placeholder="Enter equipment">
     </div>
-    <div class="form-group">
-      <label for="technical_id">Technical ID:</label>
+    <div class="form-group"> 
+      <label for="technical_id">Technical ID *:</label>
       <input type="text" class="form-control" id="technical_id" name="technical_id" required placeholder="Enter technical ID">
     </div>
     <div class="form-group">
-      <label for="asset_id">Asset ID:</label>
+      <label for="asset_id">Asset ID *:</label>
       <input type="text" class="form-control" id="asset_id" name="asset_id" required placeholder="Enter asset ID">
     </div>
     <div class="form-group">
-      <label for="inventory_labeling">Inventory Labeling:</label>
+      <label for="inventory_labeling">Inventory Labeling *:</label>
       <input type="text" class="form-control" id="inventory_labeling" name="inventory_labeling" required placeholder="Enter inventory labeling">
     </div>
     <div class="form-group">
-      <label for="category">Category:</label>
+      <label for="category">Category *:</label>
       <input type="text" class="form-control" id="category" name="category" required placeholder="Enter category">
     </div>
     <div class="form-group">
-      <label for="item">Item:</label>
+      <label for="item">Item *:</label>
       <input type="text" class="form-control" id="item" name="item" required placeholder="Enter item">
     </div>
     <div class="form-group">
@@ -42,11 +42,11 @@
       <input type="text" class="form-control" id="make" name="make" placeholder="Enter make">
     </div>
     <div class="form-group">
-      <label for="model">Model:</label>
+      <label for="model">Model *:</label>
       <input type="text" class="form-control" id="model" name="model" required placeholder="Enter model">
     </div>
     <div class="form-group">
-      <label for="serial_no">Serial Number:</label>
+      <label for="serial_no">Serial Number *:</label>
       <input type="text" class="form-control" id="serial_no" name="serial_no" required placeholder="Enter serial number">
     </div>
     <div class="form-group">
@@ -58,19 +58,19 @@
       <input type="text" class="form-control" id="document_id" name="document_id" placeholder="Enter document ID">
     </div>
     <div class="form-group">
-      <label for="acquisition_date">Acquisition Date:</label>
+      <label for="acquisition_date">Acquisition Date *:</label>
       <input type="date" class="form-control" id="acquisition_date" name="acquisition_date" required>
     </div>
     <div class="form-group">
-      <label for="amount">Amount:</label>
+      <label for="amount">Amount *:</label>
       <input type="number" class="form-control" id="amount" name="amount" required placeholder="Enter Amount">
     </div>
     <div class="form-group">
-      <label for="exchange_rate">Exchange Rate:</label>
+      <label for="exchange_rate">Exchange Rate *:</label>
       <input type="number" class="form-control" id="exchange_rate" name="exchange_rate" required placeholder="Enter The Exchange Rate">
     </div>
     <div class="form-group">
-      <label for="Amount_in_USD">Amount in USD:</label>
+      <label for="Amount_in_USD">Amount in USD *:</label>
       <input type="number" class="form-control" id="amount_in_usd" name="amount_in_usd" required placeholder="Enter The Amount in USD">
     </div>
     <div class="form-group">
@@ -103,7 +103,7 @@
       <input type="text" class="form-control" id="internal_remark" name="internal_remark" placeholder="Enter internal remark">
     </div>
     <div class="form-group">
-      <label for="included_in_hq">Included in HQ:</label>
+      <label for="included_in_hq">Included in HQ *:</label>
       <select class="form-control" id="included_in_hq" name="included_in_hq" required>
         <option value="yes">Yes</option>
         <option value="no">No</option>
