--- a/templates/official_history.html
+++ b/templates/official_history.html
@@ -81,7 +81,7 @@
                         <td>{{ history.contract_type }}</td>
                         <td>{{ history.grade }}</td>
                         <td>{{ history.designation }}</td>
-                        <td>{{ project.proj_name }}</td>
+                        <td>{{ history.project.proj_name }}</td>
                         <td>{{ history.created_date }}</td>
                     </tr>
                 {% endfor %}
